# TPE_LiFi

./: .gitignore  CMakeLists.txt  README.md
src/: ParametresCommunication.h  Utility.cpp  Utility.h  main.cpp
src/Emission/: Emetteur.cpp  Emetteur.h  ImplEmetteur.h
src/Reception/: ImplRecepteur.h  Recepteur.cpp  Recepteur.h
